# meta_fastrack

./: .gitattributes  .gitignore  README.md
ros/: out.txt
ros/src/backup_utils/: package.xml
ros/src/backup_utils/include/utils/: types.h  uncopyable.h
ros/src/data_logger/: CMakeLists.txt  package.xml
ros/src/data_logger/data/coffee/: p0_coffee_adaptive_metrics.txt  p0_coffee_adaptive_positions.pkl  p10_coffee_adaptive_metrics.txt  p10_coffee_adaptive_positions.pkl  p10_coffee_irrational_metrics.txt  p10_coffee_irrational_positions.pkl  p10_coffee_rational_metrics.txt  p10_coffee_rational_positions.pkl  p11_coffee_adaptive_metrics.txt  p11_coffee_adaptive_positions.pkl  p11_coffee_irrational_metrics.txt  p11_coffee_irrational_positions.pkl  p11_coffee_rational_metrics.txt  p11_coffee_rational_positions.pkl  p12_coffee_adaptive_metrics.txt  p12_coffee_adaptive_positions.pkl  p12_coffee_irrational_metrics.txt  p12_coffee_irrational_positions.pkl  p12_coffee_rational_metrics.txt  p12_coffee_rational_positions.pkl  p13_coffee_adaptive_metrics.txt  p13_coffee_adaptive_positions.pkl  p13_coffee_irrational_metrics.txt  p13_coffee_irrational_positions.pkl  p13_coffee_rational_metrics.txt  p13_coffee_rational_positions.pkl  p14_coffee_adaptive_metrics.txt  p14_coffee_adaptive_positions.pkl  p14_coffee_irrational_metrics.txt  p14_coffee_irrational_positions.pkl  p14_coffee_rational_metrics.txt  p14_coffee_rational_positions.pkl  p15_coffee_adaptive_metrics.txt  p15_coffee_adaptive_positions.pkl  p15_coffee_irrational_metrics.txt  p15_coffee_irrational_positions.pkl  p15_coffee_rational_metrics.txt  p15_coffee_rational_positions.pkl  p16_coffee_adaptive_metrics.txt  p16_coffee_adaptive_positions.pkl  (+58 more)
ros/src/data_logger/data/nocoffee/: p0_nocoffee_adaptive_metrics.txt  p0_nocoffee_adaptive_positions.pkl  p0_nocoffee_irrational_metrics.txt  (+99 more)
ros/src/data_logger/launch/: logger.launch
ros/src/data_logger/src/: data_logger.py  data_logger_node.py  plot_efficiency.py  plot_safety.py  plot_triangle_efficiency.py  plot_triangle_safety.py  plotting.py
ros/src/meta_planner/: .gitattributes  CMakeLists.txt  package.xml
ros/src/meta_planner/backup_exec/: tracker_coupled_7d_node.cpp
ros/src/meta_planner/backup_headers/: flann_tree.h  position_velocity.h  tracker_coupled_7d.h  waypoint.h  waypoint_tree.h
ros/src/meta_planner/backup_srcs/: lantern_sensor.cpp  sensor.cpp
ros/src/meta_planner/config/: lifecam.yml  meta_planner.yaml  pedestrian_pred.yaml
ros/src/meta_planner/exec/: double_integrator_ilqr_planner_node.cpp  meta_planner_position_velocity_demo_node.cpp  planner_manager_position_velocity_demo_node.cpp  position_velocity_planner_manager_demo_node.cpp  single_integrator_ilqr_planner_node.cpp  tracker_coupled_7d_node.cpp  tracker_node.cpp  tracker_position_velocity_node.cpp  trajectory_interpreter_node.cpp
ros/src/meta_planner/launch/: coffee.launch  hardware_coffee.launch  hardware_demo.launch  hardware_demo_lanterns.launch  hardware_snakes.launch  run_cam.launch  rviz.launch  snakes_test.launch  software_1planner_demo.launch  software_2planner_demo.launch  software_2planner_neural.launch  software_demo.launch  software_demo_room.launch  triangle.launch
ros/src/meta_planner/modules/: FindGlog.cmake
ros/src/meta_planner/precomputation/: .gitattributes
ros/src/meta_planner/rviz/: human_pred.rviz  meta_planner.rviz
ros/src/meta_planner/scripts/: bound_xs.csv  bound_zs.csv  planner_xs.csv  planner_ys.csv  planner_zs.csv  plot_position_bound.m  plot_position_bound_total.m  plot_subsystems.py  save_position_bound.py  times.csv  tracker_xs.csv  tracker_ys.csv  tracker_zs.csv
ros/src/meta_planner/src/: balls_in_box.cpp  box.cpp  double_integrator_3d.cpp  environment.cpp  flann_tree.cpp  junk.cpp  lanterns_in_box.cpp  matlab_value_function.cpp  meta_planner.cpp  neural_policy.py  neural_tracker.py  neural_utils.py  neural_value_function.py  obstacle_cost_3d.cpp  occu_grid_time.cpp  planner.cpp  planner_manager.cpp  position_velocity.cpp  sensor.cpp  single_integrator_3d.cpp  snakes_in_tesseract.cpp  test_lapack.cpp  time_varying_a_star.cpp  time_varying_rrt.cpp  tracker.cpp  tracker_coupled_7d.cpp  trajectory.cpp  trajectory_interpreter.cpp  waypoint_tree.cpp
ros/src/meta_planner/test/: test_linear_dynamics.cpp  test_matio.cpp  test_ompl_planner.cpp  test_value_function.cpp
ros/src/meta_planner_msgs/: CMakeLists.txt  package.xml
ros/src/meta_planner_msgs/msg/: Control.msg  ControllerId.msg  OccupancyGridTime.msg  PlannerState  PlannerState.msg  ProbabilityGrid.msg  ReplanRequest.msg  SensorMeasurement.msg  State.msg  Trajectory.msg  TrajectoryRequest.msg  UserpointInstruction.msg  Waypoint.msg
ros/src/meta_planner_srvs/: CMakeLists.txt  package.xml
ros/src/meta_planner_srvs/srv/: PlannerDynamics.srv  TrackingBound  TrackingBound.srv
ros/src/neural_tracker/: .gitattributes  CMakeLists.txt  package.xml
ros/src/neural_tracker/launch/: hardware_meta_demo.launch  hardware_meta_demo_7Dcoupled.launch  hardware_meta_demo_7Dcoupled_lanterns.launch  software_hover_demo.launch  software_meta_demo.launch  software_meta_demo_7Dcoupled.launch
ros/src/neural_tracker/saved_networks/: .gitattributes  TESTpolicies6D_PT_h40_h40.pkl  TESTpolicies7D_PTcoupled_h60_h60_h60.pkl  TESTpolicies7Dubins_PT_h100_h100.pkl  policies6D_PT_h40_h40.pkl
ros/src/neural_tracker/src/: Auxiliary.py  Utils.py  neural_policy.py  neural_tracker.py  neural_tracker_node.py  neural_value_server.py  neural_value_server_node.py
ros/src/value_function/: CMakeLists.txt  package.xml
ros/src/value_function/exec/: value_function_server_node.cpp
ros/src/value_function/src/: analytical_point_mass_value_function.cpp  linear_dynamics.cpp  near_hover_dynamics.cpp  near_hover_quad_no_yaw.cpp  subsystem_value_function.cpp  value_function.cpp  value_function_server.cpp
ros/src/value_function/srv/: TrackingBoundBox.srv
ros/src/value_function_srvs/: CMakeLists.txt  package.xml
ros/src/value_function_srvs/srv/: GeometricPlannerTime.srv  OptimalControl.srv  Priority.srv  SwitchingTrackingBoundBox.srv
(+77 files in other folders)
