<?xml version="1.0"?>
<package>
  <name>meta_planner_srvs</name>
  <version>0.0.0</version>
  <description>The meta_planner_srvs package</description>

  <author email="dfk@eecs.berkeley.edu">David Fridovich-Keil</author>
  <author email="sylvia.herbert@eecs.berkeley.edu">Sylvia Herbert</author>
  <maintainer email="dfk@eecs.berkeley.edu">David Fridovich-Keil</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>fastrack_msgs</build_depend>
  <build_depend>meta_planner_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>fastrack_msgs</run_depend>
  <run_depend>meta_planner_msgs</run_depend>
</package>
