<?xml version="1.0"?>
<package>
  <name>neural_tracker</name>
  <version>0.0.0</version>
  <description>The neural_tracker package</description>

  <author email="dfk@eecs.berkeley.edu">David Fridovich-Keil</author>
  <maintainer email="dfk@eecs.berkeley.edu">David Fridovich-Keil</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>crazyflie_msgs</build_depend>
  <build_depend>crazyflie_utils</build_depend>
  <build_depend>meta_planner_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>crazyflie_msgs</run_depend>
  <run_depend>crazyflie_utils</run_depend>
  <run_depend>meta_planner_msgs</run_depend>
</package>
